Fix stats and github logo not showing on small screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,7 @@ body {
 
 #header {
   background-color: white;
+  margin-top: 25px;
   padding: 15px;
   position: relative;
   z-index: 10;
